--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# Core dependencies
 aiofiles==24.1.0
 aiogram==3.20.0.post0
 aiogram-test==0.1.0
@@ -26,10 +27,6 @@ psycopg2-binary==2.9.10
 pydantic==2.11.5
 pydantic_core==2.33.2
 Pygments==2.19.1
-pytest==8.2.2
-pytest-asyncio==0.23.5
-pytest-cov==6.1.1
-pytest-mock==3.14.1
 python-dotenv==1.1.0
 pytz==2025.2
 requests==2.32.3
@@ -40,3 +37,19 @@ tzdata==2025.2
 tzlocal==5.3.1
 urllib3==2.4.0
 yarl==1.20.0
+
+# Testing
+pytest==8.2.2
+pytest-asyncio==0.23.5
+pytest-cov==6.1.1
+pytest-mock==3.14.1
+
+# Code quality
+flake8==7.0.0
+black==24.2.0
+isort==5.13.2
+mypy==1.8.0
+
+# Development
+ipython==8.22.2
+ipdb==0.13.13
